--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,19 +16,19 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: Set up Go
+    - name: set up go
       uses: actions/setup-go@v3
       with:
         go-version: 1.19
 
-    - name: Install Mage
-      run: go install github.com/magefile/mage@07afc7d24f4d6d6442305d49552f04fbda5ccb3e
+    - name: install mage
+      run: go install github.com/magefile/mage@300bbc868ba8f2c15b35e09df7e8804753cac00d
 
-    - name: Build Lambdas
+    - name: build lambdas
       run: mage lambdas
 
-    - name: Build CLI
+    - name: build cli
       run: mage cli
 
-    - name: Test
+    - name: run tests
       run: mage test
