--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -19,10 +19,10 @@ jobs:
     - name: set up go
       uses: actions/setup-go@v3
       with:
-        go-version: 1.20
+        go-version: 1.20.x
 
     - name: install mage
-      run: go install github.com/magefile/mage@07afc7d24f4d6d6442305d49552f04fbda5ccb3e
+      run: go install github.com/magefile/mage@300bbc868ba8f2c15b35e09df7e8804753cac00d
 
     - name: build lambdas
       run: mage lambdas
