--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,7 +9,7 @@
             "type": "go",
             "request": "launch",
             "mode": "auto",
-            "program": "${workspaceRoot}/cmd/",
+            "program": "${workspaceRoot}/cmd/cli",
             "cwd": "${workspaceRoot}/",
             "env": {},
             "args": ["gen"],
