--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -26,3 +26,4 @@ jobs:
         uses: golangci/golangci-lint-action@v3
         with:
           version: v1.50.1
+          args: --concurrency 1 --timeout 5m0s
