add more checks

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -6,3 +6,8 @@ linters:
   enable:
     - errcheck
     - govet
+    - staticcheck
+    - typecheck
+    - unused
+    - ineffassign
+    - gosimple
