--- a/.github/workflows/golangci-lint.yml
+++ b/.github/workflows/golangci-lint.yml
@@ -15,8 +15,8 @@ jobs:
   golangci:
     name: lint
     runs-on: ubuntu-latest
-    env:
-      GOGC: 20
+    # env:
+    #   GOGC: 20
     steps:
       - uses: actions/setup-go@v3
         with:
@@ -25,5 +25,5 @@ jobs:
       - name: golangci-lint
         uses: golangci/golangci-lint-action@v3
         with:
-          version: v1.50.1
-          args: --concurrency 1 --timeout 5m0s
+          version: v1.52.2
+          # args: --concurrency 1 --timeout 5m0s
