--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,11 +1,14 @@
 run:
   fast: true
+  concurrency: 1
+  allow-parallel-runners: false
+  timeout: 5m
 
 linters:
   disable-all: true
   enable:
     - errcheck
-    - govet
+    # - govet
     - staticcheck
     - typecheck
     - unused
