add more golangci-lint checks (#4)
enable more golangci-lint checks

--- a/.golangci.yml
+++ b/.golangci.yml
@@ -1,8 +1,16 @@
 run:
   fast: true
+  concurrency: 1
+  allow-parallel-runners: false
+  timeout: 5m
 
 linters:
   disable-all: true
   enable:
     - errcheck
-
+    - govet
+    - staticcheck
+    - typecheck
+    - unused
+    - ineffassign
+    - gosimple
